--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-streamlit==1.24.0
-Pillow==9.5.0 
+streamlit>=1.24.0
+--find-links=https://wheel-index.linuxserver.io/ubuntu/ Pillow==9.5.0
+python-dotenv>=0.19.0 
